--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,7 @@ html {
 body{
   background-color: #FFE6F7;
   /* background-image: url('../img/starwarsbg.png'); */
+  font-family: Tahoma, Verdana, 'Segoe UI', sans-serif;
   background-repeat: repeat-x;
   background-attachment: fixed;
   background-position: center;
@@ -20,16 +21,40 @@ nav{
   background-color: #937DC2;
 }
 
+button{
+  background-color: #56369b;
+  border-radius: 8px;
+  padding: 10px;
+  font-size: 15px;
+  border: none;
+  margin-top: 10px;
+  font-family: Tahoma, Geneva, Verdana, sans-serif;
+  color: #FFFFFF;
+}
+
+button:hover{
+  background-color: #937DC2;
+}
+
+footer{
+  background-color: #937DC2;
+  height: 300px;
+  padding: 50px;
+}
+
 /* CLASS SELECTORS */
 .nav-logo{
   height: 100px;
+  margin-left: 60px;
 
 }
 .icon{
   margin: 30px;
+  margin-right: 60px;
   color: black;
   font-size: 30px;
   float: right;
+
 }
 .in-effect{
   display: none;
@@ -54,20 +79,78 @@ nav{
   display: inline-block;
 }
 
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  z-index: 1;
+  text-align: center;
+}
+
+.alert-content{
+  background-color: #C689C6;
+  color: white;
+  width: 30%;
+  height: 30%;
+  padding: 20px;
+  position: relative;
+  top: 30%;
+  left: 30%;
+}
 .profile-pic{
-  width: 300px;
-  height: 300px;
+  width: 80%;
+  height: 80%;
 }
 
 .grid-container{
+  color: #56369b;
+
   display: grid;
-  grid-row: 20% 20% 20% 20%;
+  grid-template-columns: auto auto auto;
+  row-gap: 50px;
   gap: 10px;
 }
 
-/* ID SELECTORS */
+.grid-container > div{
+  text-align: center;
+  margin-bottom: 50px;
+  color: #56369b;
+}
 
+.logo-bottom{
+  font-size: 50px;
+}
+/* ID SELECTORS */
+#hide-modal:hover{
+  color: black;
+}
 /* #937DC2
 #C689C6
 #FFABE1
 #FFE6F7*/
+
+@media only screen and (max-width: 900px) {
+  .grid-container{
+    grid-template-columns: auto auto;
+  }
+  .grid-container > div{
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .in-effect{
+
+    width: 50%;
+  }
+  .grid-container{
+    grid-template-columns: auto;
+  }
+  .grid-container > div{
+    margin-bottom: 20px;
+  }
+}
