--- a/style/index.css
+++ b/style/index.css
@@ -107,11 +107,12 @@ footer{
 }
 
 .grid-container{
+  margin-top: 30px;
   color: #56369b;
 
   display: grid;
-  grid-template-columns: auto auto auto;
-  row-gap: 50px;
+  grid-template-columns: auto auto auto auto;
+  row-gap: 20px;
   gap: 10px;
 }
 
@@ -125,26 +126,6 @@ footer{
   font-size: 50px;
 }
 
-/* .personname {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 20px;
-  height: 20px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
-} */
-
-/* Safari */
-/* @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-} */
 
 /* ID SELECTORS */
 #hide-modal:hover{
